# expert

./: README.md  expert_system.py  fit.py  gpu_model.joblib  gpus.json  main.py  predict.py  pyproject.toml
