[project]
name = "sandbox"
version = "0.1.0"
description = ""
authors = [
    { name = "Oidaho", email = "76991612+Oidaho@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "joblib (>=1.5.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "keras (>=3.9.2,<4.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
